--- a/src/app/login/styles.module.scss
+++ b/src/app/login/styles.module.scss
@@ -29,7 +29,7 @@
   }
 
   .title {
-    color: var(--Foundation-CInza-cinza-900, #515151);
+    color:#515151;
     font-size: 20px;
     font-style: normal;
     font-weight: 500;
@@ -38,7 +38,7 @@
   }
 
   .sectionTitle {
-    color: var(--Foundation-CInza-cinza-800, #6A6A6A);
+    color: #6A6A6A;
     font-size: 16px;
     font-style: normal;
     font-weight: 400;
