--- a/src/app/components/Navbar/styles.module.scss
+++ b/src/app/components/Navbar/styles.module.scss
@@ -3,6 +3,18 @@
   height: 80px;
 }
 
+.logoTitle {
+  color: #9D9D9D;
+  
+    font-family: Lato;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 900;
+    line-height: 24px;
+    letter-spacing: 0.4px;
+        padding-right: 40px;
+}
+
 .headerContent {
   height: 5rem;
   margin: 0 auto;
